[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/MobAnimator.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Units/Mob/Bully/Bully_front.res" type="SpriteFrames" id=2]
[ext_resource path="res://Sprites/Units/Mob/Bully/Bully_body.res" type="SpriteFrames" id=3]
[ext_resource path="res://Sprites/Units/Mob/Bully/Bully_back.res" type="SpriteFrames" id=4]
[ext_resource path="res://Shaders and Materials/MobRecolorBlue.tres" type="Material" id=5]
[ext_resource path="res://Scripts/Mob.gd" type="Script" id=6]
[ext_resource path="res://Scripts/StateMachine/States/MobAttackMeleeState.gd" type="Script" id=7]
[ext_resource path="res://Scripts/StateMachine/States/MobIdleState.gd" type="Script" id=8]
[ext_resource path="res://Scripts/StateMachine/States/MobMoveState.gd" type="Script" id=9]
[ext_resource path="res://Scripts/StateMachine/StateMachine.gd" type="Script" id=10]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[sub_resource type="CircleShape2D" id=2]

[node name="Mob" type="Node2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 6 )
moveSpeed = 3.0
attackDelay = 5
attackRange = 125
handContainerPath = NodePath("KinematicBody2D/Animator/HandContainer")
hurtBoxPath = NodePath("KinematicBody2D/Animator/HandContainer/Hurtbox/CollisionShape2D")
animatorPath = NodePath("KinematicBody2D/Animator")
spritePaths = [ NodePath("KinematicBody2D/Animator/Body"), NodePath("KinematicBody2D/Animator/HandContainer/BackHand"), NodePath("KinematicBody2D/Animator/HandContainer/FrontHand") ]
mobStateMachinePath = NodePath("MobStateMachine")

[node name="MobIdleState" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="MobMoveState" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="MobAttackMeleeState" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="MobStateMachine" type="Node" parent="."]
script = ExtResource( 10 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="Animator" type="Node2D" parent="KinematicBody2D"]
position = Vector2( 0, -32 )
script = ExtResource( 1 )
bodySpritePath = NodePath("Body")
frontHandSpritePath = NodePath("HandContainer/FrontHand")
backHandSpritePath = NodePath("HandContainer/BackHand")

[node name="Body" type="AnimatedSprite" parent="KinematicBody2D/Animator"]
material = ExtResource( 5 )
frames = ExtResource( 3 )
animation = "Idle"
frame = 10
playing = true

[node name="HandContainer" type="Node2D" parent="KinematicBody2D/Animator"]

[node name="BackHand" type="AnimatedSprite" parent="KinematicBody2D/Animator/HandContainer"]
material = SubResource( 1 )
position = Vector2( 0, 4.056 )
z_index = -1
z_as_relative = false
frames = ExtResource( 4 )
animation = "Idle"
frame = 8
playing = true
offset = Vector2( 0, -4.056 )

[node name="FrontHand" type="AnimatedSprite" parent="KinematicBody2D/Animator/HandContainer"]
position = Vector2( 0, 4.056 )
z_index = 1
z_as_relative = false
frames = ExtResource( 2 )
animation = "Idle"
frame = 4
playing = true
offset = Vector2( 0, -4.056 )

[node name="Hurtbox" type="KinematicBody2D" parent="KinematicBody2D/Animator/HandContainer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Animator/HandContainer/Hurtbox"]
position = Vector2( 33, 3 )
shape = SubResource( 4 )

[node name="MobCollision" type="CollisionShape2D" parent="KinematicBody2D"]
scale = Vector2( 1.724, 1.202 )
shape = SubResource( 2 )

[connection signal="transitioned" from="MobStateMachine" to="KinematicBody2D/Animator" method="_on_MobStateMachine_transitioned"]
